--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,17 +5,17 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoBar">
+        android:theme="@style/AppTheme.NoBar"
+        android:usesCleartextTraffic="true">
         <activity android:name=".HomeActivity" />
         <activity
             android:name=".SplashScreen"
@@ -27,10 +27,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FilmActivity" android:screenOrientation="portrait" />
-        <activity android:name=".ActeurActivity" android:screenOrientation="portrait" />
-        <activity android:name=".ZoekenActivity" android:screenOrientation="portrait" />
-        <activity android:name=".GenresActivity" android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".FilmActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ActeurActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ZoekenActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".GenresActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".NieuweZoekenActivity"></activity>
     </application>
 
 </manifest>
