--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,8 @@
             android:name=".GenresActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".NieuweZoekenActivity"></activity>
+
+        <uses-library android:name="org.apache.http.legacy" android:required="false" />
     </application>
 
 </manifest>
